--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "thla",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "multer": "^1.2.1"
   }
 }
